testdata/invalid/conversion_literal_out_of_range.hzn
package probes

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    value := u8(u32(300))
    if value == 0 {
        return 0
    }
    return 0
}
